--- a/docassemble/FeeWaiver/data/questions/fee_waiver.yml
+++ b/docassemble/FeeWaiver/data/questions/fee_waiver.yml
@@ -17,10 +17,9 @@ modules:
 mandatory: True
 code: |
   ilao_easy_form_url = "https://www.illinoislegalaid.org/legal-information/fee-waiver"
-  ilao_easy_form_title = "Fee Waiver"
+  ilao_easy_form_title = "Fee waiver"
   github_repo_name = "docassemble-FeeWaiver"
   github_user = 'IllinoisLegalAidOnline'
-  #interview_short_title = "Fee Waiver"
   form_name = "Fee waiver"
   al_form_type = 'existing_case'
   allowed_courts = ['Circuit']
@@ -100,123 +99,6 @@ code: |
   nav.set_section('section_download')
   get_docs_screen
 ---
-#scan for variables: False
-#sets: interview_order_IL_fee_waiver
-##################### Interview order #####################
-#comment: |
-#  Controls order and branching logic for questions specific to this form
-#id: interview_order_IL_fee_waiver
-#code: |
-#  # Set the allowed courts for this interview
-#  allowed_courts = interview_metadata["IL_fee_waiver"]["allowed courts"]
-#  nav.set_section('section_intro')
-#  # Below sets the user_role by asking a question.
-#  # You can set user_role directly instead to either 'plaintiff' or 'defendant'
-#  filing_basis
-#  #if filing_basis == "filing_on_behalf_of":
-#  # users.gather() moved to after user_ask_role    
-#  nav.set_section('section_income')
-#  if user_receives_benefits:
-#    user_qualifies_interstitial
-#  else:
-#    user_applied_for_benefits
-#    user_has_dependents
-#    set_progress(11.11)
-#    user_income_none
-#    user_annual_none
-#    nav.set_section('section_expenses')
-#    user_expense_none
-#    set_progress(22.22)
-#    nav.set_section('section_assets')
-#    ask_user_assets
-#    # If something went wrong obtaining income limit, just skip this screen
-#    # The error will get logged.
-#    if not poverty_scale_get_income_limit(household_size=household_size, multiplier=1.25) is None:
-#      show_qualification_guess
-#  substantial_hardship_explanation
-#    
-#  nav.set_section('section_case_info')
-#  user_ask_role
-#  users.gather()
-#  other_parties.gather()  
-#  # user_consents_email_notice
-#  set_progress(33.33)
-#  trial_court.address.address
-#  docket_number
-#  plaintiffs
-#  defendants
-#  set_progress(64.44)
-#  nav.set_section('section_about_you')
-#  set_parts(subtitle=str(users))
-#  users[0].birth_year
-#  set_progress(75.56)
-#  users[0].address.address
-#  if filing_basis == "filing_self":
-#    set_progress(86.67)
-#    users[0].has_email_address
-#  if filing_basis != "filing_self":
-#    signer[0].address.address
-#    set_progress(86.67)
-#    signer[0].has_email_address
-#  interview_order_IL_fee_waiver = True
-#---
-####################### Main order ######################
-#comment: |
-#  This block includes the logic for standalone interviews.
-#  Delete mandatory: True to include in another interview
-#mandatory: True
-#code: |
-#  nav.set_section('section_intro')
-#  sees_nav_bar
-#  #IL_fee_waiver_intro
-#  how_to_use
-#  accept_terms
-#  whats_next
-#  interview_order_IL_fee_waiver
-#  signature_date
-#  # Save anonymized interview statistics (customize the saved data below)
-#  store_variables_snapshot(data={'zip': users[0].address.zip})
-#  basic_questions_signature_flow
-#  set_progress(100)
-#  nav.set_section('section_download')
-#  get_docs_screen
-#---
-#mandatory: True
-#comment: |
-#  This contains metadata that will not be overwritten if this YAML file is included in another file. Each file gets its own key in the interview_metadata dictionary.
-#  Most keys are not currently used at runtime, other than "allowed courts".
-#code: |
-#  interview_metadata
-#  if not defined("interview_metadata['IL_fee_waiver']"):
-#    interview_metadata.initializeObject("IL_fee_waiver")
-#    interview_metadata["IL_fee_waiver"].update({
-#      "al_weaver_version": "1.0.2",
-#      "generated on": "2021-06-22",
-#      "title": "Application for Fee Waiver",
-#      "short title": "Fee Waiver",
-#      "description": """* You will need to know your income and expenses information for the past 12 months. You also need to know the value of your belongings, including any real estate.\n* If you are filling this form out on behalf of a minor or incompetent adult, you will need that person’s information.\n* If you  get  public  benefits,  you  may  want  to  bring  current  proof   of   eligibility   and   a benefits   statement   from   the   agency providing the benefit when you file your forms.\n* If  you  don’t  get  public  benefits,  you  may  want  to  bring  documents  showing  your  income,  value  of  belongings  (including  real  estate)  and  expense  information  when  you  file your forms.""",
-#      "original_form": "https://www.illinoiscourts.gov/forms/approved-forms/forms-approved-forms-circuit-court/fee-waiver-civil",
-#      "allowed courts": [
-#      ],
-#      "categories": [
-#        "FA-00-00-00-00",
-#        "HO-00-00-00-00",
-#        "MO-00-00-00-00",
-#        "RI-10-00-00-00",
-#        "ES-00-00-00-00",
-#        "IM-00-00-00-00",
-#        "HE-00-00-00-00",
-#        "FA-07-00-00-00",
-#        "BE-00-00-00-00",
-#        "ED-00-00-00-00",
-#        "BE-04-00-00-00",
-#      ],        
-#      "logic block variable": "interview_order_IL_fee_waiver",
-#      "attachment block variable": "IL_fee_waiver_attachment",
-#      "typical role": "unknown",
-#    })
-
----
 id: trial court county
 continue button field: case_county
 question: |
@@ -266,18 +148,6 @@ question:  |
 fields:
   - code: |
       users[0].name_fields()
----
-#comment: |
-#  This question is used to introduce your interview. Please customize
-#id: Application_for_Fee_Waiver
-#continue button field: IL_fee_waiver_intro
-#question: |
-#  Application for Fee Waiver
-#subquestion: |
-#  * You will need to know your income and expenses information for the past 12 months. You also need to know the value of your belongings, including any real estate.
-#  * If you are filling this form out on behalf of a minor or incompetent adult, you will need that person’s information.
-#  * If you get public benefits,  you  may  want  to  bring  current  proof   of   eligibility   and   a benefits   statement   from   the   agency providing the benefit when you file your forms.
-#  * If  you  don’t  get  public  benefits,  you  may  want  to  bring  documents  showing  your  income,  value  of  belongings  (including  real  estate)  and  expense  information  when  you  file your forms.
 ---
 id: instructions
 continue button field: how_to_use
@@ -829,14 +699,6 @@ code: |
     you_or_obo_name = users[0].familiar()
     your_or_obo_possessive = users[0].familiar() + "'s"
     are_is = "is"
-#---
-#sets: 
-#  - signer[0].name.first
-#  - signer[0].address.zip
-#code: |
-#  if filing_basis == "filing_self":
-#    signer[0].name.first = users[0].name.first
-#    signer[0].address.zip = users[0].address.zip
 ---
 continue button field: ask_user_assets  
 id: What assets do you have
@@ -910,15 +772,6 @@ fields:
     datatype: currency
     min: 0
     show if: user_asset_other 
-#validation code: |
-#  if not user_asset_none and not (
-#    user_asset_bank_account or 
-#    user_asset_home or
-#    user_asset_other_real_estate or
-#    user_asset_vehicle1 or
-#    user_asset_vehicle2 or
-#    user_asset_other):
-#    validation_error("You need to select one", field="user_asset_none")
 ---
 code: |
   user_asset_total = (sum_if_defined(
@@ -1069,11 +922,6 @@ fields:
       variable: filing_basis
       is: filing_on_behalf_of
 ---
-#id: Do you agree to get notices from the court by email
-#question: |
-#  Do you agree to get notices from the court by email?
-#yesno: user_consents_email_notice
----
 id: birth year
 question: |
   % if filing_basis == "filing_self":
@@ -1214,9 +1062,9 @@ content: |
 id: is there an opposing party?
 question: |
   % if al_form_type in ['starts_case','existing_case','appeal'] and user_started_case:
-  Is there a **defendant** or respondent in this case? 
+  Is there a **defendant** or **respondent** in this case? 
   % elif al_form_type in ['starts_case','existing_case','appeal']:
-  Is there a **plaintiff** or petitioner in this case?
+  Is there a **plaintiff** or **petitioner** in this case?
   % else:
   Is there someone on the other side of your dispute?
   % endif
@@ -1369,14 +1217,14 @@ fields:
 ---
 template: signature_help
 subject: |
-  **What does it mean to sign the *Fee Waiver*?**
+  **What does it mean to sign the Fee waiver?**
 content: |  
-  By signing your *Fee Waiver*, you are certifying that:
+  By signing your Fee waiver, you are certifying that:
   
   * Everything on the form is true and correct, and
   * You are not filing it for an improper purpose, such as to cause delay.
 
-  See the **[Illinois Supreme Court Rule 137](https://www.illinoiscourts.gov/rules-law/supreme-court-rules)**, for more information.
+  See **[Illinois Supreme Court Rule 137](https://www.illinoiscourts.gov/rules-law/supreme-court-rules)** for more information.
 ---
 id: signature choice
 decoration: file-signature
@@ -1428,26 +1276,6 @@ under: |
     ${ signer[0].name.full(middle="full") }
   % endif
 ---
-#id: download IL_fee_waiver
-#event: IL_fee_waiver_download
-#question: |
-#  Your forms are ready to download.
-#subquestion: |
-#  Congratulations! Your forms are ready to download and deliver.
-#  
-#  View, download and send your forms below. Click the "Make changes" button to fix any mistakes.
-#
-#  ${ action_button_html(url_action('review_IL_fee_waiver'), label='Make changes', color='info') }
-#  
-#  
-#  ${ al_user_bundle.download_list_html() }
-#  
-#
-#  ${ al_user_bundle.send_button_html(show_editable_checkbox=False) }
-#
-#progress: 100
-#css: ${ docs_list_css() }
----
 id: get docs screen
 event: get_docs_screen
 question: |
@@ -1490,25 +1318,11 @@ content: |
   
   [Illinois Legal Aid Online](https://www.illinoislegalaid.org)
 ---
-#reconsider: 
-#  - IL_fee_waiver_attachment["final"]
-#  - IL_fee_waiver_supplement["final"]
-#  - IL_fee_waiver_order["final"]
-#code: |
-#  if trial_court.address.county == "Winnebago":
-#    email_sent_ok = send_email(to=users[0].delivery_email, template=forms_email, attachments=[ IL_fee_waiver_order["final"], IL_fee_waiver_supplement["final"], IL_fee_waiver_attachment["final"], IL_fee_waiver_Post_interview_instructions["final"] ])
-#  else:
-#    email_sent_ok = send_email(to=users[0].delivery_email, template=forms_email, attachments=[ IL_fee_waiver_order["final"], IL_fee_waiver_attachment["final"], IL_fee_waiver_Post_interview_instructions["final"] ])
-#---
 objects:
   - IL_fee_waiver_Post_interview_instructions: ALDocument.using(title="Instructions", filename="instructions.pdf", has_addendum=False)
   - IL_fee_waiver_attachment: ALDocument.using(title="Fee Waiver Application", filename="Fee waiver application.pdf", has_addendum=False)
   - IL_fee_waiver_supplement: ALDocument.using(title="Winnebago Supplement", filename="Winnebago supplement.pdf", has_addendum=False)
   - IL_fee_waiver_order: ALDocument.using(title="Fee Waiver Order", filename="Fee waiver order.pdf", has_addendum=False)
-#  - IL_fee_waiver_Post_interview_instructions: ALDocument.using(title="Instructions", filename="il_fee_waiver_instructions.pdf", has_addendum=False)
-#  - IL_fee_waiver_attachment: ALDocument.using(title="Fee Waiver Application", filename="FeeWaiver_Civil_Application.pdf", has_addendum=False)
-#  - IL_fee_waiver_supplement: ALDocument.using(title="Winnebago Supplement", filename="winnebago_supplement.pdf", has_addendum=False)
-#  - IL_fee_waiver_order: ALDocument.using(title="Fee Waiver Order", filename="FeeWaiver_Civil_Order.pdf", has_addendum=False)
 ---
 code: |
   IL_fee_waiver_Post_interview_instructions.enabled = False
@@ -2293,24 +2107,6 @@ review:
     button: |
       **Do you want to add your e-signature to your fee waiver?**
       ${ word(yesno(e_signature)) }
-  #- Edit: 
-  #  - signature_choice
-  #  - recompute:
-  #        - basic_questions_signature_flow
-  #  button: |
-  #    **Signature choice**:
-  #    % if (signature_choice == "phone") or (signature_choice == "this device"):
-  #    ${ signature_choice.capitalize() }      
-  #    % elif signature_choice == "add name":
-  #    % if filing_basis == "filing_self":
-  #    ${ "Add /s/ " + users[0].name.full(middle="full") }
-  #    % else:
-  #    ${ "Add /s/ " + signer[0].name.full(middle="full") }
-  #    % endif
-  #    % elif signature_choice == "no signature":
-  #    ${ "Leave blank and sign later" }
-  #    % endif
-
 ---
 continue button field: plaintiffs.revisit
 question: |
@@ -2328,7 +2124,6 @@ columns:
 edit:
   - name.first
 confirm: True
-
 ---
 continue button field: defendants.revisit
 question: |
@@ -2361,20 +2156,8 @@ rows: users
 columns:
   - Name: |
       row_item.name.full(middle="full") if defined("row_item.name.first") else ""
-  #- Year of birth: |
-      #row_item.birth_year if defined("row_item.birth_year") else ""
-  #- Address: |
-      #row_item.address.block() if defined("row_item.address.address") else ""
-  #- Signature: |
-      #row_item.signature if defined("row_item.signature") else ""
-  #- Email: |
-      #row_item.email if defined("row_item.email") else ""
 edit:
   - name.first
-  #- birth_year
-  #- address.address
-  #- signature
-  #- email
 confirm: True
 ---
 table: other_parties.table
@@ -2893,20 +2676,3 @@ review:
     button: |
       **Do you want to add your e-signature to your fee waiver?**
       ${ word(yesno(e_signature)) }
-  #- Edit: 
-  #  - signature_choice
-  #  - recompute:
-  #        - basic_questions_signature_flow
-  #  button: |
-  #    **Signature choice**:
-  #    % if (signature_choice == "phone") or (signature_choice == "this device"):
-  #    ${ signature_choice.capitalize() }      
-  #    % elif signature_choice == "add name":
-  #    % if filing_basis == "filing_self":
-  #    ${ "Add /s/ " + users[0].name.full(middle="full") }
-  #    % else:
-  #    ${ "Add /s/ " + signer[0].name.full(middle="full") }
-  #    % endif
-  #    % elif signature_choice == "no signature":
-  #    ${ "Leave blank and sign later" }
-  #    % endif
