--- a/docassemble/FeeWaiver/data/questions/fee_waiver.yml
+++ b/docassemble/FeeWaiver/data/questions/fee_waiver.yml
@@ -189,28 +189,6 @@ subquestion: |
   
   Read the "How to Ask the Judge to Participate in a Court Case for Free or at a Reduced Cost" instructions you can download at the end of this program. 
 ---
-id: accept terms
-question: |
-  Terms of use
-subquestion: |
-  This program does not provide legal advice. It does not take the place of advice from a lawyer.
-
-  Using this program does not create an attorney-client relationship between you and Illinois Legal Aid Online or its employees.
-
-  ${ collapse_template(get_legal_help) }  
-
-fields:
-  - To continue, you must accept the [**terms of use**](https://www.illinoislegalaid.org/about/terms-of-use).: accept
-    datatype: checkboxes
-    none of the above: False
-    minlength: 1
-    choices:
-      - I accept the terms of use.
-    validation messages:
-      minlength: |
-        You cannot continue unless you agree to the terms of use. 
-continue button field: accept_terms
----
 template: get_legal_help
 subject: |
   **What if I need legal advice?**
@@ -275,6 +253,8 @@ fields:
       - State Children and Family Assistance: SCFA
     required: False
 ---
+depends on:
+  - user_benefits
 code: |
   user_receives_benefits = user_benefits.any_true()
 ---
@@ -913,7 +893,7 @@ subquestion: |
 ---
 template: other_fee_waiver_considerations
 subject: |
-  What else the judge will consider
+  **What else the judge will consider**
 content: |  
   The judge will look at all of the information that you provided on this
   form to decide if ${ you_or_they } qualify. For example, the judge will compare ${ your_or_their }
@@ -1062,8 +1042,8 @@ fields:
   - label: (Optional)
     field: substantial_hardship_explanation
     datatype: area
-    rows: 4
-    maxlength: 640
+    rows: 5
+    maxlength: 500
     required: False
 ---
 id: any other users
@@ -1263,9 +1243,15 @@ id: e-signature
 question: |
   Do you want to add your e-signature to your ${ form_name }?
 subquestion: |
-  If you do not add your **{e-signature}**, you must sign your paper form before you file and deliver it.
+  If you do not add your **{e-signature}**, you must sign your paper form before you file it.
 
-  ${ collapse_template(signature_help) }  
+  % if filing_basis != "filing_self":          
+  This program can put "/s/ ${signer[0].name.full(middle="full")}" where you would sign your name. The court will accept this as your signature.
+  % else:
+  This program can put "/s/ ${users[0].name.full(middle='full')}" where you would sign your name. The court will accept this as your signature.
+  % endif
+
+  ${ collapse_template(fee_waiver_signature_help) }  
 fields:
   - "Add e-signature?": e_signature
     datatype: yesnoradio
@@ -1273,16 +1259,16 @@ terms:
   - "e-signature": |
       An e-signature is an electronic signature. It is a digital version of a signature that has the same effect as a hand-written signature. 
 ---
-template: signature_help
+template: fee_waiver_signature_help
 subject: |
-  **What does it mean to sign the Fee waiver?**
+  **What does it mean to sign the *Fee waiver*?**
 content: |  
-  By signing your Fee waiver, you are certifying that:
+  By signing your *Fee waiver*, you are certifying that:
   
-  * Everything on the form is true and correct, and
-  * You are not filing it for an improper purpose, such as to cause delay.
+  * Everything on the forms is true and correct, and
+  * You understand that making a false statement on the form is perjury, which can result in criminal penalties.
 
-  See **[Illinois Supreme Court Rule 137](https://www.illinoiscourts.gov/rules-law/supreme-court-rules)** for more information.
+  See the [**Code of Civil Procedure, 735 ILCS 5/1-109**](https://www.ilga.gov/legislation/ilcs/documents/073500050k1-109.htm), for more information.
 ---
 id: signature choice
 decoration: file-signature
@@ -1399,7 +1385,7 @@ code: |
     IL_fee_waiver_order.enabled = True
 ---
 objects:
-  - al_user_bundle: ALDocumentBundle.using(elements=[IL_fee_waiver_Post_interview_instructions, IL_fee_waiver_attachment, IL_fee_waiver_supplement, IL_fee_waiver_order], filename="IL_fee_waiver_package.pdf", title="Download all forms")
+  - al_user_bundle: ALDocumentBundle.using(elements=[IL_fee_waiver_Post_interview_instructions, IL_fee_waiver_attachment, IL_fee_waiver_supplement, IL_fee_waiver_order], filename="IL_fee_waiver_package.pdf", title="All forms")
   - al_court_bundle: ALDocumentBundle.using(elements=[IL_fee_waiver_attachment, IL_fee_waiver_supplement, IL_fee_waiver_order], filename="IL_fee_waiver_package.pdf", title="Download all forms")
 ---
 attachments:
@@ -1480,7 +1466,7 @@ attachments:
       - "user_birthdate": ${ users[0].birth_year }
       - "user_address_line_one": ${ users[0].address.line_one(bare=True) }
       - "user_address_city_state_zip": ${ users[0].address.line_two() }
-      - "signer_signature_slash_s": |
+      - "signer_signature_no_slash": |
           % if filing_basis != "filing_self":          
           ${ signer[0].name.full(middle="full") if e_signature else '' }
           % else:
@@ -1718,10 +1704,10 @@ question: |
 subquestion: |
   Edit your answers below.
 review:
-  - Edit: user_receives_benefits
+  - Edit: user_benefits
     button: |
       **Receives public benefits**:
-      ${ word(yesno(user_receives_benefits)) }
+      ${ word(yesno(user_benefits.any_true())) }
   - Edit: user_dependents_adults
     button: |
       **Number of adult dependents**:
@@ -2255,10 +2241,10 @@ question: |
 subquestion: |
   Edit your answers below.
 review:
-  - Edit: user_receives_benefits
+  - Edit: user_benefits
     button: |
       **Receives public benefits**:
-      ${ word(yesno(user_receives_benefits)) }
+      ${ word(yesno(user_benefits.any_true())) }
   - Edit: user_dependents_adults
     button: |
       **Number of adult dependents**:
