--- a/docassemble/FeeWaiver/data/questions/fee_waiver.yml
+++ b/docassemble/FeeWaiver/data/questions/fee_waiver.yml
@@ -1000,8 +1000,8 @@ fields:
       is: True
 validation code: |
   if (not showifdef('x.phone_number') and \
-      (not showifdef('x.email'))):
-    validation_error(word("You need to provide at least one contact method."), field="x.other_contact_method")
+      (x.has_email_address == False)):
+    validation_error(word("Please enter at least one contact method."), field="x.other_contact_method")
 ---
 template: contact_info_help
 subject: |
@@ -1243,13 +1243,13 @@ id: e-signature
 question: |
   Do you want to add your e-signature to your ${ form_name }?
 subquestion: |
-  If you do not add your **{e-signature}**, you must sign your paper form before you file it.
-
   % if filing_basis != "filing_self":          
-  This program can put "/s/ ${signer[0].name.full(middle="full")}" where you would sign your name. The court will accept this as your signature.
+  This program can put "**/s/ ${signer[0].name.full(middle="full")}**" where you would sign your name. The court will accept this as your signature.
   % else:
-  This program can put "/s/ ${users[0].name.full(middle='full')}" where you would sign your name. The court will accept this as your signature.
+  This program can put "**/s/ ${users[0].name.full(middle='full')}**" where you would sign your name. The court will accept this as your signature.
   % endif
+
+  If you do not add your **{e-signature}**, you must sign your paper form before you file it.
 
   ${ collapse_template(fee_waiver_signature_help) }  
 fields:
@@ -2111,11 +2111,11 @@ review:
       **Your address:**
       ${ signer[0].address.on_one_line(bare=True) }
     show if: filing_basis != "filing_self"
-  - Edit: signer[0].phone_number
+  - Edit: signer[0].has_email_address
     button: |
       **Your phone number**:
       ${ phone_number_formatted(signer[0].phone_number) }      
-  - Edit: users[0].phone_number
+  - Edit: users[0].has_email_address
     button: |
       **Your phone number**:
       % if filing_basis != "filing_self":
@@ -2135,11 +2135,12 @@ review:
       % else:
       ${ word(yesno(users[0].has_email_address)) }
       % endif
-  - Edit: signer[0].email
+  - Edit: signer[0].has_email_address
     button: |
       **Your email**:
-      ${ signer[0].email }      
-  - Edit: users[0].email
+      ${ signer[0].email }
+    show if: signer[0].has_email_address == True
+  - Edit: users[0].has_email_address
     button: |
       **Your email**:
       % if filing_basis != "filing_self":
@@ -2147,6 +2148,8 @@ review:
       % else:
       ${ users[0].email }      
       % endif
+    show if: users[0].has_email_address == True
+      
   - Edit: e_signature
     button: |
       **Do you want to add your e-signature to your fee waiver?**
@@ -2235,6 +2238,7 @@ confirm: True
 
 ---
 id: income review screen
+section: Income
 event: section_income
 question: |
   Income
@@ -2396,6 +2400,7 @@ review:
 
 ---
 id: expenses review screen
+section: Expenses
 event: section_expenses
 question: |
   Expenses
@@ -2509,6 +2514,7 @@ review:
 
 ---
 id: assets review screen
+section: Assets
 event: section_assets
 question: |
   Assets
@@ -2596,6 +2602,7 @@ review:
 
 ---
 id: court case info review screen
+section: Court case info
 event: section_case_info
 question: |
   Court case info
@@ -2638,6 +2645,7 @@ review:
 
 ---
 id: about you review screen
+section: Details about person asking for a fee waiver
 event: section_about_you
 question: |
   Details about person asking for a fee waiver
@@ -2680,11 +2688,11 @@ review:
       **Your address:**
       ${ signer[0].address.on_one_line(bare=True) }
     show if: filing_basis != "filing_self"
-  - Edit: signer[0].phone_number
+  - Edit: signer[0].has_email_address
     button: |
       **Your phone number**:
       ${ phone_number_formatted(signer[0].phone_number) }      
-  - Edit: users[0].phone_number
+  - Edit: users[0].has_email_address
     button: |
       **Your phone number**:
       % if filing_basis != "filing_self":
@@ -2704,11 +2712,12 @@ review:
       % else:
       ${ word(yesno(users[0].has_email_address)) }
       % endif
-  - Edit: signer[0].email
+  - Edit: signer[0].has_email_address
     button: |
       **Your email**:
-      ${ signer[0].email }      
-  - Edit: users[0].email
+      ${ signer[0].email }
+    show if: signer[0].has_email_address == True
+  - Edit: users[0].has_email_address
     button: |
       **Your email**:
       % if filing_basis != "filing_self":
@@ -2716,6 +2725,7 @@ review:
       % else:
       ${ users[0].email }      
       % endif
+    show if: users[0].has_email_address == True
   - Edit: e_signature
     button: |
       **Do you want to add your e-signature to your fee waiver?**
